# todo-cli

./: .gitignore  README.md  pyproject.toml
todo/: main.py  test_main.py
