[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["EdwardBKTay <130837452+EdwardBKTay@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.scripts]
todo = "todo.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.9.0"}
tabulate = "^0.9.0"
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
